--- a/Moras.Net/publish/publish.htm
+++ b/Moras.Net/publish/publish.htm
@@ -1,5 +1,6 @@
 ﻿<HTML>
   <HEAD>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <TITLE>Moras Ausrüstungsplaner</TITLE>
     <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8" />
     <STYLE TYPE="text/css">
