--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-﻿<HTML>
-  <HEAD>
-      <meta http-equiv="refresh" content="0; Moras.Net/publish/publish.htm" />
-  </HEAD>
-  <BODY>
-      <p><a href="Moras.Net/publish/publish.htm">Redirect</a></p>
-  </BODY>
-</HTML>
+---
+# You don't need to edit this file, it's empty on purpose.
+# Edit theme's home layout instead if you wanna make some changes
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: default
+lang: en
+include_full_url: Moras.Net/publish/publish.htm
+---
