--- a/index.html
+++ b/index.html
@@ -4,5 +4,12 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: default
 lang: en
+title: Moras Equipment Planer
+description: > # this means to ignore newlines until "keywords:"
+  Moras is a character equipment planing tool for the
+  MMORPG "Dark Age of Camelot" with a large item database.
+keywords: >
+  Moras, Moras.Net, equipment planing tool, character, MMORPG,
+  Dark Age of Camelot, item, database
 include_full_url: Moras.Net/publish/publish.htm
 ---
