Use lang at the right places and new default lang for full includes.

--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@ keywords: >
   Moras, Moras.Net, equipment planing tool, character, MMORPG,
   Dark Age of Camelot, item, database
 include_full_url: Moras.Net/publish/publish.htm
+include_lang: de
 ---
