--- a/index.html
+++ b/index.html
@@ -14,3 +14,6 @@ keywords: >
 include_full_url: Moras.Net/publish/publish.htm
 include_lang: de
 ---
+<a href="https://github.com/DiablosOffens/Moras.Net">
+  <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub">
+</a>
